Added special setup to fix module issues in Kieker aspectj.